# LernMetal

./: CMakeLists.txt  Makefile  README.md
Shaders/: Shader.metal
Src/: MyAppDelegate.h  MyAppDelegate.m  MyMTKViewDelegate.cpp  MyMTKViewDelegate.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
metal-cmake/: Makefile
